# pdlearn

./: README.md  README.rst  pyproject.toml
examples/: breast_cancer.py  diabetes.py  digits.py  iris.py  news.py  wine.py
pdlearn/: __init__.py  core.py  encode.py
pdlearn/models/: __init__.py  sklearn.py
pdlearn/util/: parse.py  reshape.py
