[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "pdlearn"
version = "0.0.1"
description = "AutoML integration for pandas DataFrames"
readme = "README.rst"
authors = [
    { name="Eric Erkela", email="eerkela42@gmail.com" }
]
license = { file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "pandas",
    "sklearn",
    "automl",
    "regression",
    "classification"
]
dependencies = [
    "auto-sklearn",
    "numpy",
    "pandas",
    "psutil",
    "sklearn",
]
requires-python = ">=3.7"


[project.urls]
"Homepage" = "https://github.com/eerkela/pdlearn"
"Issue Tracker" = "https://github.com/eerkela/pdlearn/issues"
